# Innotter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  web-entrypoint.sh
innotter/: __init__.py  celery.py  jwt_middleware.py  settings.py  urls.py
innotter_functional/: AWS_clients.py  apps.py  aws_conn.py  aws_s3_conn.py  aws_ses_conn.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
innotter_functional/migrations/: 0001_initial.py  0002_initial.py  0003_alter_page_followers_alter_page_tags_alter_page_uuid_and_more.py  0004_alter_page_follow_requests.py  0005_delete_comment.py  0006_post_likes.py  0007_alter_page_image.py
user/: models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_image_s3_path.py  0003_alter_user_image_s3_path.py
